--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "guridaek-react-modal-hook",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/guridaek/react-modal-hook.git"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "browser": "./browser/specific/main.js",
